--- a/specs/source/web-keys/index.html
+++ b/specs/source/web-keys/index.html
@@ -209,19 +209,20 @@
   <body> 
     <section id='abstract'> 
       <p>
-The proliferation of Web services have resulted in a new problem
-across Web service providers - authorization of access to resources. OAuth 2
-provides a mechanism for granting access to resources, but some systems
-require more functionality out of the granting mechanism. Historically, 
-public/private key cryptography has provided a mechanism to perform message
-verification (via digital signatures) and strong cryptography. These two 
-features are also typically used to provide access control to resources as
-provided by OAuth. This specification demonstrates how systems that require
-more than OAuth 2 can move to a Public Key Infrastructure that is 
-built on top of the Web using Linked Data principles. The infrastructure allows
-people and organizations to register authentication keys with one another
-for the purpose of creating verifiable messages, encryption and enabling 
-access control to resources.
+The future of messaging in Web services depends on three key
+features; message verifiability, secure messaging, and dynamic access 
+control to resources. While OAuth provides a mechanism for performing dynamic
+access control to resources, it does not address verifiability and secure
+messaging. More advanced Web service systems are being built now that
+require all three features. Historically, public/private key cryptography 
+has provided a mechanism to achieve message verifiability 
+(via digital signatures), and secure messaging (via encryption). Often,
+access control to resources are built on top of public/private key
+cryptography systems. The challenge has always been in building an extensible,
+distributed, Public Key Infrastructure for the Web. This specification 
+demonstrates how systems that require more than OAuth 2 can hook into a 
+decentralized Public Key Infrastructure that is built on top of the Web 
+using Linked Data principles.
       </p>
     </section>
 
@@ -229,10 +230,21 @@ access control to resources.
       <h2>Introduction</h2>
       <p class="issue">
 Need to write an introductory section.
+      </p>
+      <p class="note">
 Web Keys are not a replacement for Transport Layer Security, but are designed 
 to work in concert with the security protocol. Web Keys are also capable of 
 operating in environments where TLS is not available to the application.
       </p>
+      <section>
+         <h3>Key Technologies</h3>
+         <p>
+Technologies utilized in this specification include the
+JavaScript Object Notation for Linking Data [[!JSON-LD]], and the
+Advanced Encryption Standard [[!AES]].
+         <p>
+      </section>
+
     </section>
 
     <section>
@@ -248,33 +260,38 @@ a location on the Web.
 There are a number of terms that are used during the course of the registration
 process.
         <dl>
+        <dt><tdef>actor</tdef></dt>
+        <dd>An entity, such as a person or organization, that performs actions
+on the Internet.</dd>
+        <dt><tdef>account</tdef></dt>
+        <dd>An identifier with a set of log in credentials that is associated
+with a <tref>key listing service</tref>.</dd>
         <dt><tdef>user agent</tdef></dt>
         <dd>The piece of software operating on behalf of the 
-<tref>participant</tref>. This is typically a Web Browser, but could be
-some other piece of Web-aware automated software acting on behalf of a 
-person.</dd>
+<tref>actor</tref>. This is typically a Web Browser, but could be
+some other piece of Web-aware automated software acting on behalf of an
+<tref>actor</tref>.</dd>
         <dt><tdef>key agent</tdef></dt>
-        <dd>A software agent acting on behalf of the <tref>key listing account</tref>
-that publishes <tref>asset</tref>s for sale. Typically, this is blogging
-software, content distribution software, online merchant software or a Web-based
+        <dd>A piece of software acting on behalf of an <tref>actor</tref> for
+the purposes of utilizing Web Keys. Typically, this is blogging software, 
+content distribution software, online merchant software or a Web-based
 game.</dd>
+        <dt><tdef>key listing service</tdef></dt>
+        <dd>A Web service that is responsible for registering and publishing
+Web keys for an <tref>actor</tref></dd>
         <dt><tdef>configuration service</tdef></dt>
         <dd>A Web service that is used to publish the public Web service
 end-points and other public configuration information for a
-<tref>key listing service</tref>. An <tref>key listing service</tref> MUST
+<tref>key listing service</tref>. A <tref>key listing service</tref> MUST
 publish this service at a top-level IRI named 
-<code>.well-known/linked-data-services</code>. The document MUST be available 
+<code>/.well-known/linked-data-services</code>. The document MUST be available 
 in JSON-LD compacted form and MUST include the 
-<code>http://purl.org/wek-key/v1</code> JSON-LD context. The following
+<code>http://purl.org/web-keys/v1</code> JSON-LD context. The following
 key MUST be present in the published document:
 <code>wkey:publicKeyService</code>.</dd>
         <dt><tdef>public key registration service</tdef></dt>
         <dd>An interactive Web service used to register PEM-encoded 
 X.509 public keys with the <tref>key listing service</tref>.</dd>
-        <dt><tdef>license service</tdef></dt>
-        <dd>A utility service is used by a <tref>key agent</tref>s 
-to retrieve license hashes, which are used when listing <tref>asset</tref>s 
-for sale.</dd>
         </dl>
         </p>
       </section>
@@ -282,23 +299,23 @@ for sale.</dd>
       <section>
         <h2>Key Owner Registration</h2>
         <p>
-In order for a <tref>key owner</tref> to register their key, they must have an
-account on a <tref>key listing service</tref>. How this account is created 
-is outside of the scope of this specification. However, the end result of this 
-sign up process MUST result in an account being created for the 
-<tref>key owner</tref>:
+In order for an <tref>actor</tref> to register a key, they must have an
+<tref>account</tref> on a <tref>key listing service</tref>. How this 
+<tref>account</tref> is created is outside of the scope of this 
+specification. However, the end result of this sign up process MUST result in 
+an <tref>account</tref> being created for the <tref>actor</tref>:
         </p>
       </section>
 
       <section>
         <h2>Web Key Registration</h2>
         <p>
-In order for a <tref>key owner</tref> to take part in the 
+In order for an <tref>actor</tref> to take part in the 
 <tref>public key</tref> infrastructure, they MUST register their 
 <tref>public key</tref> with a <tref>key listing service</tref>.
         </p>
-The registration process is typically performed by 
-<tref>key agent</tref> software. The registration is accomplished by executing
+The registration process is typically performed by a
+<tref>key agent</tref>. The registration is accomplished by executing
 the following algorithm:
         <ol class="algorithm">
           <li>
@@ -312,7 +329,7 @@ encrypt messages.</li>
               <li>The <tref>configuration service</tref> IRI is generated 
 by concatenating a base IRI for the <tref>key listing service</tref>, 
 such as <code>https://example.com/</code> with the 
-<code>.well-known/linked-data-services</code> suffix. 
+<code>/.well-known/linked-data-services</code> suffix. 
 For example, the previous <tref>key listing service</tref> IRI concatenated 
 with the configuration suffix would result in the following 
 <tref>configuration service</tref>
@@ -323,7 +340,8 @@ set to <code>application/ld+json; form=compacted</code>. The
 <tref>key listing service</tref> MUST respond with a compacted JSON-LD document
 using the context specified at <code>http://purl.org/web-key/v1</code>.</li>
               <li>The result MUST be a JSON-LD document containing a flat set of
-key-value pairs defined in the <tref>configuration service</tref> section above.
+key-value pairs. The data MUST contain at least the properties defined in 
+the <tref>configuration service</tref> section.
               </li>
             </ol>
           </li>
@@ -380,7 +398,7 @@ digitally signed or encrypted.</li>
 The example below shows the full protocol-level exchange between the
 <tref>key agent</tref> and the <tref>key listing service</tref>. For
 the sake of brevity, not every optional parameter is included, just the bare
-minimum necessary to perform the <tref>key listing account</tref> registration.
+minimum necessary to perform the <tref>key listing service</tref> registration.
         </p>
 
 <pre class="example">
@@ -545,9 +563,20 @@ for the <code>registration-callback</code> IRI to protect the
     </section>
 
     <section>
+      <h2>Discovery</h2>
+      <p class="issue">
+Write section about how a <tref>key listing service</tref> MUST make the
+key IRI returned to the registrant a machine-readable document, either via
+JSON-LD or RDFa. This means that machines can de-reference the public key
+IRI and discover other information about the key such as the owner, expiration
+date/time, etc.
+      </p>
+    </section>
+
+    <section>
       <h2>Messaging</h2>
       <p class="issue">
-Need to write an introduction to verifiable messaging.
+Need to write an introduction to verifiable messaging and why it's important.
       </p>
 
       <section>
@@ -936,7 +965,7 @@ occur over SSL.
       <h2>Permission and Access Rights Delegation</h2>
       <p>
 During the <a href="#the-key-registration-process">Key Registration Process</a>,
-a <tref>key listing service</tref> MAY ask the <tref>participant</tref> that is
+a <tref>key listing service</tref> MAY ask the <tref>actor</tref> that is
 registering to grant a number of permissions and access rights to any 
 <tref>agent</tref> that digitally signs a message to a Web service using the
 registered key. Note that this mechanism is similar to the OAuth permission
@@ -944,7 +973,7 @@ granting mechanism and can be used in place of OAuth if the system requires
 both Permission and Access Rights Delegation as well as digital signatures. To
 take advantage of this mechanism, a <tref>agent</tref> would digitally sign
 a message requesting that a certain action be performed on behalf of the
-<tref>participant</tref>.
+<tref>actor</tref>.
       </p>
     </section>
 
