--- a/index.xhtml
+++ b/index.xhtml
@@ -36,6 +36,10 @@
   <div class="row">
     <div class="twelvecol last">
 <p class="largeprint">
+PaySwarm is the worlds first open, Universal Payment Standard for the Web. It 
+makes payment a core part of the Web's infrastructure.
+</p>
+<p class="largeprint">
 PaySwarm enables people that create digital content such as blog posts, music,
 film, episodic content, photos, virtual goods, and documents to distribute their
 creations through their website and <strong>receive payment directly from their 
@@ -52,11 +56,11 @@ rewarded for their hard work.</p>
 
 <p class="largeprint">
 This Web-native payment technology is designed to seamlessly integrate with
-how the Web works, not how the banks and the credit card companies work. The
-technology can be integrated directly into WordPress-based websites with 
-support for Drupal and other content management systems in the works. It has
-a simple, well-defined API, like Twitter, that allows for universal payment on 
-the web.
+how the Web works, not how the banks and the credit card companies have
+traditionally worked. The technology can be integrated directly into 
+WordPress-based websites with support for Drupal and other content management 
+systems in the works. It has a simple, well-defined API, like Twitter, that 
+allows for Universal Payment on the web.
 </p>
     </div>
   </div>
@@ -167,8 +171,9 @@ help build a better Web for all of us.</p>
 You can affect the future of PaySwarm by collaborating with the open community
 that is involved with designing and implementing this technology. There are
 no qualifications necessary to join the group - if you're interested in
-digital content distribution, peer-to-peer development, media, digital culture or
-the Web, join us. There are a few ways that you can keep up with what is going
+payments, crowd-funding, digital content distribution, 
+peer-to-peer development, media, digital culture or the Web, join us. 
+There are a few ways that you can keep up with what is going
 on as well as take part in designing the future of digital content distribution
 on the web:
 </p>
