Updated reference to new split specifications on main page.

--- a/index.xhtml
+++ b/index.xhtml
@@ -249,11 +249,31 @@ Transaction processing environment.
     </div>
     
     <div class="fourcol last">
-    <h2>Web API</h2>
-    
+    <h2>Specs</h2>
+
 <p>
-The <a href="specs/source/web-api/">PaySwarm Web API</a> defines the open
-PaySwarm protocol for exchanging money via the Web.
+<a href="specs/source/web-keys">Web Keys</a> is a secure and verifiable messaging
+mechanism built using Linked Data principles to produce a distributed
+Public Key Infrastructure for the Web.
+</p>
+
+<p>
+<a href="specs/source/web-payments">Web Payments</a> defines the base layer of the
+PaySwarm architecture; enabling the creation of a monetary transaction between 
+two participants on the Web.
+</p>
+
+<p>
+<a href="specs/source/web-commerce">Web Commerce</a> defines the electronic 
+commerce portion of the PaySwarm architecture; enabling the decentralized 
+listing of assets for sale and the transaction of those assets resulting in a 
+digitally verifiable receipt between the buyer and the vendor.
+</p>
+
+<p>
+<a href="specs/source/payment-intents">Payment Intents</a> defines the
+parameterized transactions layer of the PaySwarm architecture; enables 
+decentralized crowd-funding for innovative initiatives and projects.
 </p>
 
     </div>
