Add front page link to all specs.

--- a/index.xhtml
+++ b/index.xhtml
@@ -276,6 +276,11 @@ parameterized transactions layer of the PaySwarm architecture; enables
 decentralized crowd-funding for innovative initiatives and projects.
 </p>
 
+<p>
+<a href="specs/">More...</a> All current and previous specifications,
+vocabularies, and related documentation.
+</p>
+
     </div>
   </div>
 </div>
