Fixed typo in use cases document spotted by Melvin Carvalho.

--- a/specs/source/use-cases/index.html
+++ b/specs/source/use-cases/index.html
@@ -156,7 +156,7 @@ in the set of PaySwarm 1.0 specifications.
 following of people that read his blog. He would like to sell content that
 he writes about to his many readers, but doesn't have the music and movie
 industry connections to acquire content for distribution. Typically,
-content deals require an multi-million dollar, advance payment in return
+content deals require a multi-million dollar, advance payment in return
 for the right to sell content. This high up-front cost removes many
 potential sellers, harming the overall incentive to distribute for people
 that run smaller music websites and blogs.</p> 
